--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 </title>
   </head>
   <body>
-    
+    <div class="header">
+      <div class="logo">
+        <img src="./resources/images/img-tea-cozy-logo.png" alt="Tea Cozy logo">
+      </div>
+      <div class="top-menu">
+        <span class="menu-item"><a href="#mission">Mission</a></span>
+        <span class="menu-item"><a href="#featured">Featured Tea</a></span>
+        <span class="menu-item"><a href="#locations">Locations</a></span>
+      </div>
+
+    </div>
   </body>
 </html>
