--- a/index.html
+++ b/index.html
@@ -16,7 +16,72 @@
         <span class="menu-item"><a href="#featured">Featured Tea</a></span>
         <span class="menu-item"><a href="#locations">Locations</a></span>
       </div>
+    </div>
+    <div class="page-content">
+      <div class="page-header">
+        <div class="header-block">
+          <h2 id="mission">Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+      </div>
+      <div class="page-body">
+        <div class="body-header">
+          <h2 id="featured">Tea of the Month</h2>
+          <h4>What's Steeping at The Tea Cozy?</h4>
+        </div>
+        <div class="products">
+          <div class="product-block">
+            <img src="./resources/images/img-berryblitz.jpg" alt="Berry Blitz Tea">
+            <h4>Fall Berry Blitz Tea</h4>
+          </div>
+          <div class="product-block">
+            <img src="./resources/images/img-spiced-rum.jpg" alt="Spiced Rum Tea">
+            <h4>Spiced Rum Tea</h4>
+          </div>
+          <div class="product-block">
+            <img src="./resources/images/img-donut.jpg" alt="Seasonal Donuts">
+            <h4>Seasonal Donuts</h4>
+          </div>
+          <div class="product-block">
+            <img src="./resources/images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
+            <h4>Myrtle Ave Tea</h4>
+          </div>
+          <div class="product-block">
+            <img src="./resources/images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
+            <h4>Bedford Bizarre Tea</h4>
+          </div>
+        </div>
+        <div class="locations">
+          <h2 id="locations">Locations</h2>
+          <div class="location-blocks">
+            <div class="single-location">
+              <h3>Downtown</h3>
+              <span><p>384 West 4th St</p></span>
+              <span><p>Suite 108</p></span>
+              <span><p>Portland, Maine</p></span>
+            </div>
+            <div class="single-location">
+              <h3>East Bayside</h3>
+              <span><p>3433 Phisherman's Avenue</p></span>
+              <span><p>(Northwest Corner)</p></span>
+              <span><p>Portland, Maine</p></span>
+            </div>
+            <div class="single-location">
+              <h3>Oakdale</h3>
+              <span><p>515 Crescent Avenue</p></span>
+              <span><p>Second Floor</p></span>
+              <span><p>Portland, Maine</p></span>
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
 
     </div>
+
+
+
   </body>
 </html>
