--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       </div>
     </div>
     <div class="page-content">
-      <div class="page-header">
+      <div id="mission" class="page-header">
         <div class="header-block">
-          <h2 id="mission">Our Mission</h2>
+          <h2>Our Mission</h2>
           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
       </div>
       <div class="page-body">
-        <div class="body-header">
-          <h2 id="featured">Tea of the Month</h2>
+        <div id="featured" class="body-header">
+          <h2>Tea of the Month</h2>
           <h4>What's Steeping at The Tea Cozy?</h4>
         </div>
         <div class="products">
@@ -51,8 +51,8 @@
             <h4>Bedford Bizarre Tea</h4>
           </div>
         </div>
-        <div class="locations">
-          <h2 id="locations">Locations</h2>
+        <div id="locations" class="locations">
+          <h2>Locations</h2>
           <div class="location-blocks">
             <div class="single-location">
               <h3>Downtown</h3>
@@ -72,13 +72,17 @@
               <span><p>Second Floor</p></span>
               <span><p>Portland, Maine</p></span>
             </div>
-
           </div>
-
         </div>
-
       </div>
-
+    </div>
+    <div class="footer">
+      <div class="contact">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+      </div>
+      <span class="copyright"><p>copyright The Tea Cozy 2017</p></span>
     </div>
 
 
